# rac_grafika_zad

./: README.md  brletic.cpp
brletic/: CMakeLists.txt  box.h  box_renderer.h  brletic.cpp  indexbuffer.cpp  indexbuffer.h  pathconfig.h.in  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
brletic/shaders/: frag_p.glsl  point_f.glsl  point_v.glsl  sphere_fragment.glsl  sphere_vertex.glsl  vert.glsl  vert_p.glsl
shaders/: frag.glsl  point_f.glsl  point_v.glsl  sphere_fragment.glsl  sphere_vertex.glsl  vert.glsl
